# domain

./: .travis.yml  README.md  domain.cabal  facade.cabal  stack.yaml
.github/workflows/: check.yaml
demo/: Main.hs
docs/: Schema.md
inline-demo/: Main.hs
internals-test/: Main.hs
internals/Domain/: Attoparsec.hs  InstanceDec.hs  InstanceDecTemplate.hs  InstanceDecs.hs  Model.hs  ModelTH.hs  ModelText.hs  ModelV2.hs  Prelude.hs  V1DocModel.hs  YamlUnscrambler.hs
internals/Domain/Attoparsec/: CategoryCentricDoc.hs  General.hs  TypeString.hs
internals/Domain/Components/: Resolver.hs
internals/Domain/Deriver/: TH.hs
internals/Domain/Models/: CategoryCentricDoc.hs  TypeCentricDoc.hs  TypeString.hs
internals/Domain/Resolvers/: CategoryCentricDoc.hs  TypeCentricDoc.hs
internals/Domain/Util/: InstanceDecTemplate.hs  TH.hs
internals/Domain/YamlUnscrambler/: CategoryCentricDoc.hs  TypeCentricDoc.hs
loading-demo/: Main.hs
samples/: 1.yaml
test/: Main.hs
test/Util/: TH.hs
test/Util/TH/: LeafTypes.hs
