name: domain
version: 0.1
synopsis: Handy domain model declaration toolkit
description:
  - Let your domain model definition be focused on domain model only.
  - Let it be readable and comfortly editable, avoiding syntactic noise.
  - Separate its declaration from the problems of declaration of instances,
  accessor functions, optics and etc.
  - Have the notorious records problem solved.
  - Similarly have the less notorious problem of conflicting constructor names of sum-types solved.
  - Avoid boilerplate while doing all the above.
homepage: https://github.com/nikita-volkov/domain
bug-reports: https://github.com/nikita-volkov/domain/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/domain.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Domain
    Domain.Deriver
  other-modules:
    Domain.AesonValueParser
    Domain.Attoparsec
    Domain.Components.Resolver
    Domain.Components.TypeResolutionMapBuilder
    Domain.Deriver.TH
    Domain.Model
    Domain.Prelude
    Domain.TH
    Domain.Util.AesonValueParser
    Domain.Util.List
    Domain.Util.Yaml
    Domain.V1DocModel
  build-depends:
    aeson >=1 && <2,
    aeson-value-parser >=0.19 && <0.20,
    attoparsec >=0.13 && <0.14,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.11,
    hashable >=1 && <2,
    mtl >=2.2 && <3,
    text >=1.2.4 && <2,
    template-haskell >=2.15 && <3,
    template-haskell-compat-v0208 >=0.1.5 && <0.2,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.10 && <0.3,
    yaml >=0.11 && <0.12

test-suite loading-demo
  type: exitcode-stdio-1.0
  hs-source-dirs: loading-demo
  main-is: Main.hs
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  ghc-options: -ddump-splices
  build-depends:
    domain,
    rerebase >=1.9 && <2

test-suite inline-demo
  type: exitcode-stdio-1.0
  hs-source-dirs: inline-demo
  main-is: Main.hs
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  ghc-options: -ddump-splices
  build-depends:
    domain,
    rerebase >=1.9 && <2
