name: domain
version: 0.1.1.3
synopsis: Codegen helping you define domain models
description:
  - For introduction and demo skip to [Readme](#readme).
  - For documentation and syntax reference see the "Domain.Docs" module.
  - For API documentation refer to the "Domain" module,
    which exports the whole API of this package.
homepage: https://github.com/nikita-volkov/domain
bug-reports: https://github.com/nikita-volkov/domain/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10
extra-source-files:
  README.md
  samples/*.yaml

source-repository head
  type: git
  location: git://github.com/nikita-volkov/domain.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators
  default-language: Haskell2010
  exposed-modules:
    Domain
    Domain.Docs
  other-modules:
    Domain.Attoparsec.General
    Domain.Attoparsec.TypeString
    Domain.Models.TypeCentricDoc
    Domain.Models.TypeString
    Domain.Prelude
    Domain.Resolvers.TypeCentricDoc
    Domain.Text
    Domain.TH.InstanceDec
    Domain.TH.InstanceDecs
    Domain.TH.TypeDec
    Domain.YamlUnscrambler.TypeCentricDoc
  build-depends:
    attoparsec >=0.13 && <0.15,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.12,
    domain-core >=0.1 && <0.2,
    foldl >=1.4.9 && <2,
    hashable >=1 && <2,
    parser-combinators >=1.3 && <1.4,
    template-haskell >=2.13 && <3,
    template-haskell-compat-v0208 >=0.1.6 && <0.2,
    text >=1.2.3 && <2,
    th-lego >=0.2.3 && <0.4,
    yaml-unscrambler >=0.1 && <0.2

test-suite loading-demo
  type: exitcode-stdio-1.0
  hs-source-dirs: loading-demo
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base,
    domain,
    text

test-suite inline-demo
  type: exitcode-stdio-1.0
  hs-source-dirs: inline-demo
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
    base,
    domain,
    text

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveLift, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLabels, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators
  default-language: Haskell2010
  main-is: Main.hs
  other-modules:
    Util.TH
    Util.TH.LeafTypes
  build-depends:
    domain,
    domain-core,
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase >=1.10.0.1 && <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,
    template-haskell,
    template-haskell-compat-v0208 >=0.1.6 && <0.2,
    th-orphans >=0.13 && <0.14
