name: facade
version: 0.1
synopsis: Neat domain model declaration toolkit
homepage: https://github.com/nikita-volkov/facade
bug-reports: https://github.com/nikita-volkov/facade/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2020 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/facade.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DerivingVia, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedLists, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    Facade.Model
  other-modules:
    Facade.AesonValueParser
    Facade.Attoparsec
    Facade.Prelude
    Facade.Util.AesonValueParser
    Facade.Util.List
    Facade.Util.Yaml
    Facade.V1DocModel
    Facade.V1DocModelAnalysis.TH
    Facade.V1DocModelAnalysis.Components.Resolver
    Facade.V1DocModelAnalysis.Components.TypeResolutionMapBuilder
  build-depends:
    aeson >=1 && <2,
    aeson-value-parser >=0.19 && <0.20,
    attoparsec >=0.13 && <0.14,
    base >=4.9 && <5,
    bytestring >=0.10 && <0.11,
    containers >=0.6.2 && <0.7,
    hashable >=1 && <2,
    megaparsec >=8.0 && <10,
    profunctors >=5.5.2 && <6,
    selective >=0.4 && <0.5,
    text >=1 && <2,
    template-haskell >=2.15 && <3,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.10 && <0.3,
    uuid >=1.3 && <2,
    vector >=0.12 && <0.13,
    yaml >=0.11 && <0.12
